<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="music"
            type="com.bironader.musicsearch.busniness.entites.MusicDomainModel" />
    </data>

    <ScrollView
        android:id="@+id/musicDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".framework.presentaion.articledetails.ArticalDetailsFragment">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:imageUrl="@{music.largeImage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_broken_image" />


            <TextView
                android:id="@+id/by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@{music.artist}"
                android:textSize="11sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                tools:ignore="SmallSp"
                tools:text="By Nicholas Kristof" />


            <TextView

                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@{music.type}"
                android:textSize="11sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/by"
                tools:ignore="SmallSp"
                tools:text="By Nicholas Kristof" />

            <TextView
                android:id="@+id/published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{music.publishingDate}"
                android:textSize="11sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@id/image"
                tools:ignore="SmallSp"
                tools:text="By Nicholas Kristof" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="end"
                android:lineSpacingExtra="4dp"
                android:maxWidth="300dp"
                android:text="@{music.title}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type"
                tools:text="That Mysterious Monolith in the Utah Desert? It’s Gone, Officials Say" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>